force-app/main/default/objects/Marketing_Plan_Benefit__c.object
<CustomObject>
    <description>Represents benefit details that are part of a marketing plan</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <formula>Component_Attribute__r.Attribute_Category__c</formula>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Code__c</fullName>
        <formula>Component_Attribute__r.Attribute_Code__c</formula>
        <label>Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Display_Name__c</fullName>
        <formula>Component_Attribute__r.Attribute_Display_Name__c</formula>
        <label>Attribute Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Id__c</fullName>
        <formula>CASESAFEID(Attribute_Value__r.Attribute__c)</formula>
        <label>Attribute Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Long_Code__c</fullName>
        <formula>Component_Attribute__r.Attribute_Long_Code__c</formula>
        <label>Attribute Long Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value_Amount__c</fullName>
        <formula>Attribute_Value__r.Attribute_Value__c</formula>
        <label>Attribute Value Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <referenceTo>Attribute_Value__c</referenceTo>
        <relationshipName>Predefined_Package_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPQ_Disp_Sort__c</fullName>
        <description>this field is used to sort the categories when displaying in the proposal</description>
        <inlineHelpText>this field is used to sort the categories when displaying in the proposal</inlineHelpText>
        <label>CPQ Disp Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component Attribute</label>
        <referenceTo>Component_Attribute__c</referenceTo>
        <relationshipName>Predefined_Package_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <formula>Plan_Template_Component__r.Component_Name__c</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <formula>Plan_Template_Component__r.Component_Type__c</formula>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Network_Display_Name__c</fullName>
        <formula>Attribute_Value__r.In_Network_Display_Value__c</formula>
        <label>In Network Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Network_Value__c</fullName>
        <formula>Attribute_Value__r.In_Network_Value__c</formula>
        <label>In Network Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Base_Component_Benefit__c</fullName>
        <formula>Plan_Template_Component__r.Is_Base_Component__c</formula>
        <label>Is Base Component Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Benefit__c</fullName>
        <formula>Component_Attribute__r.Is_Key_Benefit__c</formula>
        <label>Is Key Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Display_Benefit__c</fullName>
        <formula>Attribute_Value__r.Attribute__r.Is_Key_Display_Benefit__c</formula>
        <label>Is Key Display Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rate_Impacting__c</fullName>
        <formula>Component_Attribute__r.Is_Rate_Impacting__c</formula>
        <label>Is Rate Impacting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limits_And_Exceptions__c</fullName>
        <formula>Attribute_Value__r.Limits_And_Exceptions_Text_Area__c</formula>
        <label>Limits And Exceptions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Name__c</fullName>
        <description>Using this field in Conga Dcoument generation</description>
        <formula>Marketing_Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Plan</label>
        <referenceTo>Marketing_Plan__c</referenceTo>
        <relationshipLabel>Marketing Plan Benefits</relationshipLabel>
        <relationshipName>Marketing_Plan_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Out_Of_Network_Display_Value__c</fullName>
        <formula>Attribute_Value__r.Out_Of_Network_Display_Value__c</formula>
        <label>Out Of Network Display Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <formula>CASESAFEID(Marketing_Plan__r.Plan_Family__c)</formula>
        <label>Plan Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Template_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Template Component</label>
        <referenceTo>Plan_Template_Component__c</referenceTo>
        <relationshipLabel>Marketing Plan Benefits</relationshipLabel>
        <relationshipName>Marketing_Plan_Benefit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Marketing Plan Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>MPB-{000000000}</displayFormat>
        <label>Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Plan Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>